# gnome-chess-puzzles

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  io.github.tegarden.gnome-chess-puzzles.yml  meson.build
build-aux/: build-flatpak.sh  cargo-build.sh
data/: README.md  import_puzzles.py  io.github.tegarden.GnomeChessPuzzles.desktop  io.github.tegarden.gnome-chess-puzzles.desktop  io.github.tegarden.gnome-chess-puzzles.metainfo.xml  puzzles.sqlite  schema.sql
data/pieces/: README.md
src/: history.rs  main.rs  move_list.rs
src/board/: mod.rs  widget.rs
src/puzzle/: mod.rs  model.rs  repository.rs  session.rs
