[package]
name = "gnome-chess-puzzles"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
adw = { package = "libadwaita", version = "0.9.2", features = ["gtk_v4_6", "v1_8"] }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
shakmaty = "=0.30.0"
zstd = "0.13"

[profile.release]
lto = "thin"
